--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             <div class="title">
                 <div>
                     <h2 style="letter-spacing: 5px">HO THI THUY HIEN</h2>
-                    <i style="padding-left: 140px">English teacher</i>
-                    <p> <i style="padding-left: 105px; font-size: 13px;">Math and IT tutor in English</i></p>
+                    <i style="padding-left: 140px; letter-spacing: 1px">English teacher</i>
+                    <p> <i style="padding-left: 105px; font-size: 13px;letter-spacing: 1px">Math and IT tutor in English</i></p>
                 </div>
 
             </div>
